# quantumedge-pipeline

./: .dockerignore  .env.example  .gitignore  API_TEST_RESULTS.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pr-description.md  pyproject.toml  requirements.txt  test_api_endpoints.py
dashboard/: app.py  demo_scenarios.py  grafana_dashboards.json  utils.py
docs/: api.md  docker-services.md  quantum-basics.md  quickstart.md  quix-integration.md  rotonium-integration.md  usage-examples.md
examples/scenarios/quix/: hydrology.json  pharma_optimization.json  portfolio_risk.json
examples/scenarios/rotonium/: aerospace_routing.json  edge_ai.json  satellite_optimization.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: datasource.yml
profiles/: default.yaml  quix.yaml  rotonium.yaml
quantumedge-pipeline/: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
quantumedge-pipeline/src/: __init__.py
quantumedge-pipeline/src/analyzer/: problem_analyzer.py
quantumedge-pipeline/src/router/: __init__.py
scripts/: benchmark_solvers.py  end_to_end_test.py  init_db.sql  setup_grafana.sh
scripts/demos/: aerospace_routing.py  ml_graph_partition.py  portfolio_optimization.py
src/: __init__.py  config.py  profile_loader.py
src/analyzer/: __init__.py  problem_analyzer.py
src/api/: main.py  orchestrator.py
src/backends/: __init__.py  backend_base.py  quix_cloud.py  rotonium_mock.py
src/monitoring/: db_manager.py  metrics_collector.py
src/problems/: __init__.py  maxcut.py  portfolio.py  problem_base.py  tsp.py
src/router/: datacenter_simulator.py  edge_simulator.py  quantum_router.py
src/solvers/: classical_solver.py  hybrid_solver.py  quantum_hardware_interface.py  quantum_simulator.py  solver_base.py
tests/: test_analyzer.py  test_api.py  test_backends.py  test_datacenter_simulator.py  test_monitoring.py  test_problems.py  test_profiles.py  test_router.py  test_solvers.py
