[tool.poetry]
name = "quantumedge-pipeline"
version = "0.1.0"
description = "Quantum-Classical Hybrid Pipeline for Edge Computing Optimization"
authors = ["Francesco Gastaldello"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# API Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# Scientific Computing
numpy = "^1.26.0"
scipy = "^1.12.0"
networkx = "^3.2.0"

# Quantum Computing
pennylane = "0.42.3"

# Classical Optimization
ortools = "^9.14.6206"

# Database
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.31.0"

# Visualization & Dashboard
streamlit = "^1.30.0"
plotly = "^5.18.0"
matplotlib = "^3.8.0"
pandas = "^2.2.0"

# System Monitoring & Utilities
psutil = "^7.0.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
